--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "A boilerplate for running a Webpack workflow in Node express",
   "main": "server.js",
+  "engines": {
+    "node": "4.1.1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/christianalfoni/webpack-express-boilerplate.git"
@@ -22,6 +25,7 @@
     "test": "",
     "start": "babel-node server",
     "build": "rimraf dist && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
+    "postinstall": "node heroku",
     "eslint": "eslint .",
     "jscs": "jscs ."
   },
