--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-express-boilerplate",
+  "name": "cerebral-website",
   "version": "0.1.0",
   "description": "A boilerplate for running a Webpack workflow in Node express",
   "main": "server.js",
@@ -8,19 +8,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/christianalfoni/webpack-express-boilerplate.git"
+    "url": "https://github.com/christianalfoni/cerebral-website.git"
   },
   "keywords": [
-    "express",
-    "webpack",
-    "node"
+    "cerebral",
+    "mvc",
+    "react",
+    "spa"
   ],
   "author": "Christian Alfoni",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/christianalfoni/webpack-express-boilerplate/issues"
+    "url": "https://github.com/christianalfoni/cerebral-website/issues"
   },
-  "homepage": "https://github.com/christianalfoni/webpack-express-boilerplate",
+  "homepage": "http://www.cerebraljs.com/",
   "scripts": {
     "test": "",
     "start": "babel-node server",
