--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "http://www.cerebraljs.com/",
   "scripts": {
     "test": "",
-    "start": "babel-node server",
+    "start": "node server_build",
+    "serverbuild": "NODE_ENV=server webpack --config webpack.server.config.js --watch",
     "build": "rimraf dist && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
     "postinstall": "node heroku",
     "eslint": "eslint .",
@@ -36,9 +37,9 @@
     "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.0.5",
     "baobab": "^2.1.1",
-    "cerebral": "^0.25.1",
+    "cerebral": "^0.26.0",
     "cerebral-baobab": "^0.4.2",
-    "cerebral-react": "^0.6.0",
+    "cerebral-react": "^0.7.0",
     "cerebral-router": "^0.7.3",
     "css-loader": "^0.19.0",
     "express": "^4.13.3",
@@ -52,6 +53,7 @@
     "react-dom": "^0.14.3",
     "react-transform-hmr": "^1.0.0",
     "rimraf": "^2.4.3",
+    "source-map-support": "^0.3.3",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
     "webpack": "^1.12.2",
