--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.0.5",
     "cerebral": "^0.28.2",
-    "cerebral-baobab": "^0.4.5",
+    "cerebral-model-baobab": "^0.4.5",
     "cerebral-react": "^0.9.0",
     "cerebral-router": "^0.8.0",
     "css-loader": "^0.19.0",
