--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cerebral-model-baobab": "^0.4.5",
     "cerebral-react": "^0.9.0",
     "cerebral-router": "^0.8.0",
+    "classnames": "^2.2.3",
     "css-loader": "^0.19.0",
     "express": "^4.13.3",
     "json-loader": "^0.5.3",
