--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "cerebral-model-baobab": "^0.4.5",
     "cerebral-react": "^0.9.0",
     "cerebral-router": "^0.8.0",
-    "classnames": "^2.2.3",
     "css-loader": "^0.19.0",
     "express": "^4.13.3",
     "json-loader": "^0.5.3",
@@ -59,21 +58,17 @@
     "webpack-hot-middleware": "^2.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^4.1.3",
-    "babel-jscs": "^2.0.4",
     "chai": "^3.2.0",
+    "sinon": "^1.16.1",
+    "sinon-chai": "^2.8.0",
     "eslint": "^1.5.0",
     "eslint-plugin-react": "^3.4.2",
-    "file-loader": "^0.8.5",
+    "babel-eslint": "^4.1.3",
+    "babel-jscs": "^2.0.4",
     "jscs": "^2.1.1",
     "jsdom": "^6.5.1",
     "mocha": "^2.3.3",
     "mocha-jsdom": "^1.0.0",
-    "node-sass": "^3.4.2",
-    "react-addons-test-utils": "^0.14.3",
-    "sass-loader": "^3.1.2",
-    "sinon": "^1.16.1",
-    "sinon-chai": "^2.8.0",
-    "url-loader": "^0.5.7"
+    "react-addons-test-utils": "^0.14.3"
   }
 }
