--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "classnames": "^2.2.3",
     "css-loader": "^0.19.0",
     "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "json-loader": "^0.5.3",
     "markdown-to-react-components": "^0.1.3",
     "postcss-loader": "^0.6.0",
@@ -51,6 +52,7 @@
     "react-dom": "^0.14.3",
     "react-transform-hmr": "^1.0.0",
     "rimraf": "^2.4.3",
+    "sass-loader": "^3.1.2",
     "source-map-support": "^0.3.3",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
