--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "babel": "^5.8.23",
     "babel-loader": "^5.3.2",
     "babel-plugin-react-transform": "^1.0.5",
-    "cerebral": "^0.28.2",
-    "cerebral-model-baobab": "^0.4.5",
-    "cerebral-react": "^0.9.0",
-    "cerebral-router": "^0.8.0",
+    "cerebral": "^0.33.31",
+    "cerebral-addons": "^0.5.3",
+    "cerebral-model-baobab": "^0.4.7",
+    "cerebral-module-devtools": "^0.5.4",
+    "cerebral-module-http": "^0.1.1",
+    "cerebral-module-router": "^0.13.1",
+    "cerebral-view-react": "^0.11.8",
     "classnames": "^2.2.3",
     "css-loader": "^0.19.0",
     "express": "^4.13.3",
