Updated with more styles and lazy loading markdown

--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
     "markdown-to-react-components": "^0.2.0",
+    "node-sass": "^3.7.0",
     "raw-loader": "^0.5.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "sass-loader": "^3.2.0",
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
