--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "cerebral": "^0.34.1",
+    "cerebral-addons": "^0.5.4",
     "cerebral-model-baobab": "^0.4.8",
     "cerebral-module-http": "^0.2.0",
     "cerebral-module-router": "^0.14.4",
