--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "raw-loader": "^0.5.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-stickynode": "^1.1.3",
     "sass-loader": "^3.2.0",
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
