--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-stickynode": "^1.1.3",
+    "request": "^2.72.0",
     "sass-loader": "^3.2.0",
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
